<?xml version="1.0"?>
<package format="2">
  <name>msp</name>
  <version>3.4.0</version>
  <description>Implementation of the MultiWii Serial Protocol (MSP)</description>

  <maintainer email="Rauch.Christian@gmx.de">Christian Rauch</maintainer>

  <license>LGPLv3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/msp</url> -->

  <author email="Rauch.Christian@gmx.de">Christian Rauch</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>asio</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>cmake</build_type>
  </export>
</package>
